--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.7
   google_mlkit_text_recognition: ^0.14.0
   image_picker: ^1.1.2
+  google_mlkit_language_id: ^0.12.0
 
 dev_dependencies:
   flutter_test:
